tests/ui/transmutability/malformed-program-gracefulness/unknown_dst_field.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_dst_field.rs:18:27
   |
LL |     #[repr(C)] struct Dst(Missing);
   |                           ^^^^^^^ not found in this scope

error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_dst_field.rs:24:36
   |
LL |     #[repr(C)] struct Dst(&'static Missing);
   |                                    ^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
